--- a/src/app/cart-drop-down/cart-drop-down.component.html
+++ b/src/app/cart-drop-down/cart-drop-down.component.html
@@ -9,16 +9,23 @@
 
       <li>
         <a>
-          Show
+          <i class="fa fa-eye"></i>
+          <span>Show</span>
           <!-- <span class="currencyFull">{{currency?.full}}</span> -->
         </a>
       </li>
 
       <li>
-        <a href="">Save</a>
+        <a href="">
+          <i class="fa fa-save"></i>
+          <span>Save</span>
+        </a>
       </li>
       <li>
-        <a href="">Empty</a>
+        <a href="">
+          <i class="fa fa-trash"></i>
+          <span>Empty</span>
+        </a>
       </li>
 
     </ul>
