--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -15,173 +15,183 @@
 
   <div id="controlsOuter">
     <div class="controlsContainer">
-        <div class="list_title">
-          <div class="boxedCheckbox">
-            <input #mc (change)="checkAll(mc)" type="checkbox" name="name" id="checkAll">
-            <label for="checkAll"></label>
-          </div>
-          <div class="list_title_text">
-            <i class="fa fa-angle-left list_title_text_controls"></i>
-            <div class="list_title_text_inner"><h2>Facial Protection</h2></div>
-            <i class="fa fa-angle-right list_title_text_controls"></i>
-          </div>
+      <div class="list_title">
+        <div class="boxedCheckbox">
+          <input #mc (change)="checkAll(mc)" type="checkbox" name="name" id="checkAll">
+          <label for="checkAll"></label>
         </div>
-        <div class="list_controls">
-
-            <div class="sortFor">
-              <span>Sort For</span>
-              <select (change)="filterBy($event)">
-                <option value="name">Name</option>
-                <option value="price">Price</option>
-              </select>
-              <button><i class="fa fa-sort-amount-asc"></i></button>
-
-            </div>
-            <div class="viewAs">
-              <span>View as</span>
-              <span 
-                [class.active]="view === 'grid'"
-                routerLink="/category/new"
-                [queryParams]="{view: 'grid'}"
-              >
-                <i class="fa fa-th-large" aria-hidden="true"></i>
-              </span>
-              <span 
-                [class.active]="view === 'list'"
-                routerLink="/category/new"
-                [queryParams]="{view: 'list'}"
-              >
-                <i class="fa fa-list" aria-hidden="true"></i>
-              </span>
-            </div>
-            <div class="zoomRange">
-              <input (input)="rangeValueChange()" type="range" id="zoomRangeInput" [(ngModel)]="numberOfProducts" min="5" max="{{allProducts?.length}}">
-              <!-- <span id="zoomRangeValue">10</span> -->
-              <input (keyup)="rangeValueChange()" type="text" name="zoomRangeValue" id="zoomRangeValue" [(ngModel)]="numberOfProducts">
-            </div>
-            <div class="dualPanel">
-              <span>
-                <input checked type="radio" name="dualPanel" value="1" id="singlePanelView">
-                <label for="singlePanelView"><i class="fa fa-bars" aria-hidden="true"></i></label>
-              </span>
-              <span>
-                <input type="radio" name="dualPanel" value="1" id="dualPanelView">
-                <label for="dualPanelView"><i class="fa fa-bars" aria-hidden="true"></i><i class="fa fa-bars" aria-hidden="true"></i></label>
-              </span>
-            </div>
-            <div class="mainCart">
-              <p (click)="mainAddtoCart()"><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p>
-            </div>
-            <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
+        <div class="list_title_text">
+          <i class="fa fa-angle-left list_title_text_controls"></i>
+          <div class="list_title_text_inner">
+            <h2>Facial Protection</h2>
+          </div>
+          <i class="fa fa-angle-right list_title_text_controls"></i>
         </div>
-        
+      </div>
+      <div class="list_controls">
+
+        <div class="sortFor">
+          <span>Sort For</span>
+          <select (change)="filterBy($event)">
+            <option value="name">Name</option>
+            <option value="price">Price</option>
+          </select>
+          <button>
+            <i class="fa fa-sort-amount-asc"></i>
+          </button>
+
+        </div>
+        <div class="viewAs">
+          <span>View as</span>
+          <span [class.active]="view === 'grid'" routerLink="/category/new" [queryParams]="{view: 'grid'}">
+            <i class="fa fa-th-large" aria-hidden="true"></i>
+          </span>
+          <span [class.active]="view === 'list'" routerLink="/category/new" [queryParams]="{view: 'list'}">
+            <i class="fa fa-list" aria-hidden="true"></i>
+          </span>
+        </div>
+        <div class="zoomRange">
+          <input (input)="rangeValueChange()" type="range" id="zoomRangeInput" [(ngModel)]="numberOfProducts" min="5" max="{{allProducts?.length}}">
+          <!-- <span id="zoomRangeValue">10</span> -->
+          <input (keyup)="rangeValueChange()" type="text" name="zoomRangeValue" id="zoomRangeValue" [(ngModel)]="numberOfProducts">
+        </div>
+        <div class="dualPanel">
+          <span>
+            <input checked type="radio" name="dualPanel" value="1" id="singlePanelView">
+            <label for="singlePanelView">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+          </span>
+          <span>
+            <input type="radio" name="dualPanel" value="1" id="dualPanelView">
+            <label for="dualPanelView">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+          </span>
+        </div>
+        <div class="mainCart">
+          <p (click)="mainAddtoCart()">
+            <i class="fa fa-opencart" aria-hidden="true"></i>
+            <span>ADD TO CART</span>
+          </p>
+        </div>
+        <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
+      </div>
+
     </div>
-    <mat-progress-bar  *ngIf="loaderVisible" mode="indeterminate" color="warn"></mat-progress-bar>
+    <mat-progress-bar *ngIf="loaderVisible" mode="indeterminate" color="warn"></mat-progress-bar>
   </div>
 
-  
-
-  
 
 
-  <div 
-    class="product_list"
-    [class.listView]="view === 'list'"
-    [class.gridView]="view === 'grid'"
-  >
 
 
-      <div #singleProduct class="single_product" *ngFor="let product of products">
-          <div class="checkboxWithPimage">
-            <div class="boxedCheckbox">
-              <input class="allProductCheckbox" type="checkbox" name="productID-{{product.id}}-selectBox" id="productID-{{product.id}}">
-              <label for="productID-{{product.id}}"></label>
-            </div>
-            <img src="{{product.pImage}}" alt=""/>
+
+  <div class="product_list" [class.listView]="view === 'list'" [class.gridView]="view === 'grid'">
+
+
+    <div #singleProduct class="single_product" *ngFor="let product of products">
+      <div class="checkboxWithPimage">
+        <div class="boxedCheckbox">
+          <input class="allProductCheckbox" type="checkbox" name="productID-{{product.id}}-selectBox" id="productID-{{product.id}}">
+          <label for="productID-{{product.id}}"></label>
+        </div>
+        <img src="{{product.pImage}}" alt="" />
+      </div>
+
+      <div class="productText">
+        <div class="pName responsiveText">
+          <p>
+            <a href="">{{product.name}}</a>
+          </p>
+        </div>
+
+        <div class="pDescription responsiveText">
+          <p>{{product.pDes}}</p>
+        </div>
+        <div class="TextField1 responsiveText">
+          <p>{{product.textField1}}</p>
+        </div>
+        <div class="TextField2 responsiveText">
+          <p>{{product.textField2}}</p>
+        </div>
+        <div class="mainCart">
+          <label for="cartfilled-id-{{product.id}}">
+            <p>
+              <i class="fa fa-opencart" aria-hidden="true"></i>
+              <span>ADD TO CART</span>
+            </p>
+          </label>
+        </div>
+        <div class="pQuantity">
+          <select name="quantity-{{product.id}}" id="quantity-{{product.id}}">
+            <option value="1">01</option>
+            <option value="2">02</option>
+            <option value="5">05</option>
+            <option value="10">10</option>
+          </select>
+        </div>
+        <div class="pPrice">
+          <p>
+            <span>{{product.price}}</span>$</p>
+        </div>
+      </div>
+      <!-- productText -->
+
+      <div class="gridViewText">
+        <div class="normalView">
+          <p class="pNname" [TextLimit]="28">{{product.name}}</p>
+          <p>
+            <span class="pNoldPrice">{{product.oldPrice}}$</span>
+            <span class="pNnewPrice">{{product.price}}$</span>
+          </p>
+        </div>
+        <div class="extendedView">
+          <p class="pEname">
+            <a href="">{{product.name}}</a>
+          </p>
+          <p class="pEprice">
+            <span class="pEoldPrice">{{product.oldPrice}} $</span>
+            <span class="pEnewPrice">{{product.price}} $</span>
+          </p>
+          <div class="pErating">
+            <!-- <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <i class="fa fa-star"></i>
+                  <span>{{product.rating}}</span> -->
+            <star-rating [starType]="'svg'" [rating]="(product.rating/20).toFixed(2)" [showHalfStars]="true" [readOnly]="true" staticColor="ok"
+              labelText="{{product.rating}}" labelPosition="right">
+            </star-rating>
           </div>
-
-          <div class="productText">
-            <div class="pName responsiveText"><p><a href="">{{product.name}}</a></p></div>
-
-            <div class="pDescription responsiveText">
-              <p>{{product.pDes}}</p>
-            </div>
-            <div class="TextField1 responsiveText"><p>{{product.textField1}}</p></div>
-            <div class="TextField2 responsiveText"><p>{{product.textField2}}</p></div>
-            <div class="mainCart">
-              <label for="cartfilled-id-{{product.id}}">
-                <p>
-                  <i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span>
-                </p>
-              </label>
-            </div>
-            <div class="pQuantity">
-              <select name="quantity-{{product.id}}" id="quantity-{{product.id}}">
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="5">05</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-            <div class="pPrice"><p><span>{{product.price}}</span>$</p></div>
-          </div> <!-- productText -->
-
-          <div class="gridViewText">
-            <div class="normalView">
-              <p class="pNname" [TextLimit]="28">{{product.name}}</p>
+          <div class="pEaddToCart">
+            <label for="cartfilled-id-{{product.id}}">
               <p>
-                <span class="pNoldPrice">{{product.oldPrice}}$</span>
-                <span class="pNnewPrice">{{product.price}}$</span>
+                <i class="fa fa-opencart" aria-hidden="true"></i>
+                <span>ADD TO CART</span>
               </p>
-            </div>
-            <div class="extendedView">
-              <p class="pEname"><a href="">{{product.name}}</a></p>
-              <p class="pEprice">
-                <span class="pEoldPrice">{{product.oldPrice}} $</span>
-                <span class="pEnewPrice">{{product.price}} $</span>
-              </p>
-              <div class="pErating">
-                <!-- <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <span>{{product.rating}}</span> -->
-                <star-rating 
-                  [starType]="'svg'" 
-                  [rating]="(product.rating/20).toFixed(2)" 
-                  [showHalfStars]="true" 
-                  [readOnly]="true" 
-                  staticColor="ok"
-                  labelText="{{product.rating}}"
-                  labelPosition="right"
-                  >
-                </star-rating>
-              </div>
-              <div class="pEaddToCart">
-                <label for="cartfilled-id-{{product.id}}">
-                  <p>
-                    <i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span>
-                  </p>
-                </label>
-              </div>
-            </div>
+            </label>
           </div>
+        </div>
+      </div>
 
-          <div class="checkedImage">
-            <div class="cartfilled">
-              <input type="checkbox" name="cartfilled-id-{{product.id}}" id="cartfilled-id-{{product.id}}" >
-              <img src="assets/images/brqx_2017_cart_filled_256.png" alt=""/>
-            </div>
-            
-            <i class="fa fa-pencil-square-o editButton" aria-hidden="true"></i>
+      <div class="checkedImage">
+        <div class="cartfilled">
+          <input type="checkbox" name="cartfilled-id-{{product.id}}" id="cartfilled-id-{{product.id}}">
+          <img src="assets/images/brqx_2017_cart_filled_256.png" alt="" />
+        </div>
 
-          </div>
-      </div> <!-- Single Product -->
-      
-      
-      
-      
+        <i class="fa fa-pencil-square-o editButton" aria-hidden="true"></i>
+
+      </div>
+    </div>
+    <!-- Single Product -->
+
+
+
+
 
 
   </div>
