--- a/src/app/user-drop-down/user-drop-down.component.css
+++ b/src/app/user-drop-down/user-drop-down.component.css
@@ -43,7 +43,7 @@
 
 #all-options i{
     margin: 0 auto;
-    font-size: 25px;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -93,7 +93,9 @@
 
 /* tablet */
 @media only screen and (max-width:1024px) {
-    
+    .optionsContainer li a span{
+        display: none;
+    }
 }
 
 /* mobile */
