--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,3 +1,5 @@
+<toolbox-modal></toolbox-modal>
+
 <div class="list_main_content">
 
   <div class="product_navigation container-fluid">
@@ -76,7 +78,7 @@
             <span>ADD TO CART</span>
           </p>
         </div>
-        <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
+        <img (click)="toolboxModalInit()" id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
       </div>
 
     </div>
