--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import "~bootstrap/dist/css/bootstrap.min.css"; */
+/* @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'; */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 /* @import "~font-awesome/css/font-awesome.min.css"; */
 @import "~css-star-rating/css/star-rating.min.css";
+/* @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"; */
 
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
