--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<p-nav></p-nav>
 <router-outlet></router-outlet>
-<scroll-to-top></scroll-to-top>
 
+<!-- <div [ngSwitch]="appData.page_type">
+    <home-page *ngSwitchCase="'home'"></home-page>
+    <home-page *ngSwitchDefault></home-page>
+</div> -->
+
+
+<scroll-to-top></scroll-to-top>
+<p-footer></p-footer>
 <!-- <home-page></home-page> -->
 <!-- <app-temp></app-temp> -->
