--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="logo">
-    <a [routerLink]='["/"]'>Pharmachy</a>
+    <a href="http://farma.vbrqx.com">Pharmachy</a>
   </div>
 
   <div class="mainMenu">
@@ -17,7 +17,7 @@
     <ul class="sliderContainer">
 
       <li #mainMenu *ngFor="let menu of menus" [class.pullDownItem]="menu.pulldown">
-        <a [routerLink]='[menu.link]'>{{menu.item}}</a>
+        <a href='{{menu.link}}'>{{menu.item}}</a>
 
         <div *ngIf="menu.pulldown" class="pullDown">
           <div class="pullDownContainer">
