--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -6,11 +6,8 @@
 .homePage{
     position: relative;
     width: 100%;
-    background: url("../../assets/images/bg.jpg") center no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
     padding-bottom: 30px;
-    min-height: calc(100vh - 65px);
+    min-height: calc(100vh - 68px);
     height: auto;
 }
 
@@ -117,6 +114,7 @@
      padding: 10px 0;
      transition: background-color .5s ease-out;
      font-size: 1em;
+     /* font-weight: 400; */
  }
  .promoNavItem.slick-current{
      background-color: #fff;
@@ -310,16 +308,22 @@
   }
 
   /* 4K Responsive */
-  @media (min-width: 2049px){
+  @media (min-width: 2100px){
     #promoSliderGalery .galleryImgContiner{
         height: 1080px;
     }
+    #promoSliderNav {
+        height: 76px;
+    }
+    #promoSliderNav > .slick-list{
+
+    }
     #promoSliderNav > i {
-        font-size: 50px;
+        font-size: 1.16em;
         padding: 20px 25px;
     }
     .promoNavItem p{
-        font-size: 47px;
+        font-size: 1em;
     }
     .singleProduct{
         height: 450px;
