--- a/src/app/topNavBar/language-selector/language-selector.component.css
+++ b/src/app/topNavBar/language-selector/language-selector.component.css
@@ -33,7 +33,7 @@
     position: absolute;
     left: 0;
     top: 28px;
-    height: 250px;
+    height: 220px;
     width: max-content;
     z-index: 5;
     display: none;
@@ -81,11 +81,14 @@
 
 
 /* 4k */
-@media only screen and (min-width: 2049px) {
+@media only screen and (min-width: 2100px) {
     #all-flags{
         top: 52px;
-        height: 460px;
+        height: 360px;
         padding-right: 12px;
+        left: auto;
+        right: 0;
+        padding-left: 20px;
     }
 
     #all-flags i {
