--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -16,10 +16,10 @@
     <i [hidden]="isDesktop" class="sliderControls fa fa-angle-up"></i>
     <ul class="sliderContainer">
 
-      <li #mainMenu *ngFor="let menu of menus" [class.pullDownItem]="menu.pulldown">
+      <li #mainMenu *ngFor="let menu of menus" [class.pullDownItem]="menu.childrens">
         <a href='{{menu.link}}'>{{menu.item}}</a>
 
-        <div *ngIf="menu.pulldown" class="pullDown">
+        <div *ngIf="menu.childrens" class="pullDown">
           <div class="pullDownContainer">
             <i class="sliderControls fa fa-angle-up"></i>
             <i class="sliderControls fa fa-angle-left"></i>
@@ -28,10 +28,10 @@
               <li *ngFor="let seclvl of menu.pulldown">
                 <a href="{{seclvl.link}}">{{seclvl.item}}</a>
 
-                <div *ngIf="seclvl.thirdLvl" class="third-lvl-menu">
+                <div *ngIf="seclvl.childrens" class="third-lvl-menu">
                   <i class="sliderControls fa fa-angle-up"></i>
                   <ul class="sliderContainer">
-                    <li *ngFor="let thrdlvl of seclvl.thirdLvl">
+                    <li *ngFor="let thrdlvl of seclvl.pull03">
                       <a href="{{thrdlvl.link}}">{{thrdlvl.item}}</a>
                     </li>
                   </ul>
@@ -43,12 +43,12 @@
             <i class="sliderControls fa fa-angle-right"></i>
           </div>
           <div class="pullDownMeta">
-            <i *ngIf="menu.pulldown[0].thirdLvl" class="expandButton fa fa-plus-circle"></i>
+            <i [style.visibility]="menu.pulldown[0].childrens ? 'visible' : 'hidden'" class="expandButton fa fa-plus-circle"></i>
             <i class="fa fa-asterisk"></i>
             <h2>{{menu.item}}</h2>
           </div>
         </div>
-        <i *ngIf="menu.pulldown" class="fa fa-plus-circle"></i>
+        <i *ngIf="menu.childrens" class="fa fa-plus-circle"></i>
       </li>
 
     </ul>
